# malutils

./: Cargo.toml  README.md
hashify/: Cargo.toml  README.md
hashify/src/: blake2t.rs  blake3t.rs  constants.rs  main.rs
randr/: Cargo.toml  README.md
randr/src/: main.rs  options.rs
serious/: Cargo.toml  README.md
serious/src/: lib.rs  main.rs
