[package]
name = "hashify"
version = "0.2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2021"

[dependencies]
blake2 = "0.10"
blake3 = "1.5"
clap = "2.34"
colored = "2.1"
digest = "0.10"
md-5 = "0.10"
ripemd = "0.1"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
stringreader = "0.1"
serious = { version = "0.1", path = "../serious" }
whirlpool = "0.10"
