[package]
name = "serious"
version = "0.2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2021"

[lib]
name = "serious"
path = "src/lib.rs"

[[bin]]
name = "serious"
path = "src/main.rs"

[dependencies]
clap = "2.33"
base-x = "0.2.6"
base64-url = "3.0"
bs58 = "0.5.1"
hex = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2.8"
stringreader = "0.1"

[dev-dependencies]
rand = "0.8"
